# nbt

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  readme.md  remove_submodule.py
.github/workflows/: cmake.yml
cmake/: clang-format.cmake  cmake-format.cmake  doxygen-docs.cmake  put_target_in_folder.cmake  readme.md
in_progress/: .gitignore
in_progress/amcs/include/: amcs.h
in_progress/amcs/include/amcs/: lexical_cast.h  logging.h  messaging.h  optional.h  threading.h  variant.h
in_progress/amcs/include/amcs/logging/: Formatter.h  Log.h  Severity.h  Sink.h  globals.h
in_progress/amcs/include/amcs/messaging/: MessageQueue.h
in_progress/amcs/include/amcs/optional/: NullOptional.h  Optional.h
in_progress/amcs/include/amcs/threading/: Mutex.h  Thread.h
in_progress/amcs/include/amcs/variant/: MonoState.h  Variant.h  Visitor.h  getIf.h
in_progress/amcs/samples/: build.py  log.txt
in_progress/amcs/samples/lexical_cast/: main.cpp
in_progress/amcs/samples/logging/: main.cpp
in_progress/amcs/samples/messaging/: main.cpp
in_progress/amcs/samples/optional/: main.cpp
in_progress/amcs/samples/threading/: main.cpp
in_progress/amcs/samples/variant/: main.cpp
in_progress/amcs/src/lexical_cast/: lexical_cast.cpp
in_progress/amcs/src/logging/: logging.cpp
in_progress/amcs/src/threading/: Thread.cpp
nbt/: CMakeLists.txt  _gitignore  readme.md
nbt/docs/: Doxyfile.in
nbt/include/: nbt.hpp
nbt/include/nbt/: ascii.hpp  binary.hpp  config.hpp  core.hpp  graphics.hpp
nbt/include/nbt/ascii/: Conversions.hpp  FileReader.hpp  FileWriter.hpp  Regex.hpp
nbt/include/nbt/binary/: Bytes.hpp  Endianness.hpp  FileReader.hpp  FileWriter.hpp
nbt/include/nbt/config/: Data.hpp  Property.hpp  Section.hpp
nbt/include/nbt/core/: Error.hpp  FileHandler.hpp  NamedType.hpp  ValueRange.hpp  math.hpp  random.hpp
nbt/include/nbt/core/detail/: random.hpp
nbt/include/nbt/graphics/: Camera.hpp  Direction.hpp  GlfwWindow.hpp  Program.hpp  Shader.hpp  Window.hpp
nbt/samples/: CMakeLists.txt
nbt/samples/nbt/: CMakeLists.txt
nbt/samples/nbt/archive/glt/: CMakeLists.txt
nbt/samples/nbt/archive/glt/drawing_points/: drawing_points.cpp
nbt/samples/nbt/archive/glt/window_creation/: CMakeLists.txt  window_creation.cpp
nbt/samples/nbt/core/: CMakeLists.txt
nbt/samples/nbt/core/simple_usage/: CMakeLists.txt  simple_usage.cpp
nbt/samples/nbt/graphics/: CMakeLists.txt
nbt/samples/nbt/graphics/plotting_points/: CMakeLists.txt  plotting_points.cpp
nbt/samples/nbt/graphics/window_creation/: CMakeLists.txt  window_creation.cpp
nbt/src/: CMakeLists.txt
nbt/src/nbt/: CMakeLists.txt
nbt/src/nbt/ascii/: CMakeLists.txt  Conversions.cpp  FileReader.cpp  FileWriter.cpp  Regex.cpp  Tokens.cpp
nbt/src/nbt/binary/: CMakeLists.txt  FileReader.cpp  FileWriter.cpp
nbt/src/nbt/config/: CMakeLists.txt  Data.cpp  Property.cpp  Section.cpp
nbt/src/nbt/core/: CMakeLists.txt  FileHandler.cpp
nbt/src/nbt/graphics/: CMakeLists.txt  Camera.cpp  GlfwWindow.cpp  Program.cpp  Shader.cpp  Window.cpp
nbt/tests/: CMakeLists.txt
nbt/tests/nbt_ascii/: AsciiTests.hpp  CMakeLists.txt  ConversionsTests.cpp  FileReaderTests.cpp  FileWriterTests.cpp  RegexTests.cpp
nbt/tests/nbt_binary/: BinaryTests.hpp  BytesTests.cpp  CMakeLists.txt  FileReaderTests.cpp  FileWriterTests.cpp
nbt/tests/nbt_binary/res/: FileSampleDoc.txt
nbt/tests/nbt_config/: CMakeLists.txt  ConfigTests.hpp  DataTests.cpp  PropertyTests.cpp  SectionTests.cpp
nbt/tests/nbt_config/res/: SampleConfigFile.txt
nbt/tests/nbt_core/: CMakeLists.txt  ErrorTests.cpp  MathTests.cpp  NamedTypeTests.cpp  RandomTests.cpp  ValueRangeTests.cpp
nbt/tests/nbt_graphics/: CMakeLists.txt  CameraTests.cpp  ProgramMock.hpp  ProgramTests.cpp  ShaderMock.hpp  ShaderTests.cpp  WindowMock.hpp  WindowTests.cpp  gltTests.hpp
nbt/tests/nbt_graphics/res/: simple.frag.glsl  simple.vert.glsl
